--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 .bgImage {
   width: 100%;
   height: 100vh;
-  background-image: url(img/IMG4.jpg);
+  background-image: url(../img/portada4.jpg);
   background-size: cover;
   background-position: center;
   animation: bgChange 20s linear infinite;
@@ -24,28 +24,28 @@ body {
 
 @keyframes bgChange {
   0% {
-    background-image: url(img/IMG4.jpg);
+    background-image: url(../img/portada4.jpg);
   }
   20% {
-    background-image: url(img/IMG4.jpg);
+    background-image: url(../img/portada4.jpg);
   }
   25% {
-    background-image: url(img/IMG3.jpg);
+    background-image: url(../img/portada3.jpg);
   }
   45% {
-    background-image: url(img/IMG3.jpg);
+    background-image: url(../img/portada3.jpg);
   }
   50% {
-    background-image: url(img/IMG2.jpg);
+    background-image: url(../img/portada2.jpg);
   }
   70% {
-    background-image: url(img/IMG2.jpg);
+    background-image: url(../img/portada2.jpg);
   }
   75% {
-    background-image: url(img/IMG1.jpg);
+    background-image: url(../img/portada1.jpg);
   }
   95% {
-    background-image: url(img/IMG1.jpg);
+    background-image: url(../img/portada1.jpg);
   }
 }
 
@@ -351,7 +351,7 @@ body {
 
   .bgImage {
     position: relative;
-    background-image: url(img/IMG2.jpg);
+    background-image: url(../img/portada2.jpg);
     background-size: cover;
     background-position: center;
     animation: bgChange 20s linear infinite;
@@ -359,28 +359,28 @@ body {
 
   @keyframes bgChange {
     0% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     20% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     25% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     45% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     50% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     70% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     75% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     95% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
   }
 
@@ -398,7 +398,7 @@ body {
 
   .bgImage {
     position: relative;
-    background-image: url(img/IMG2.jpg);
+    background-image: url(../img/portada2.jpg);
     background-size: cover;
     background-position: center;
     animation: bgChange 20s linear infinite;
@@ -406,32 +406,32 @@ body {
 
   @keyframes bgChange {
     0% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     20% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     25% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     45% {
-      background-image: url(img/IMG2.jpg);
+      background-image: url(../img/portada2.jpg);
     }
     50% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     70% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     75% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
     95% {
-      background-image: url(img/IMG3.jpg);
+      background-image: url(../img/portada3.jpg);
     }
   }
 
-  .info-childs img {
+  .info-childs ../img {
     width: 110%;
     height: auto;
     bottom: 20px;
@@ -496,7 +496,7 @@ body {
 
   .bgImage {
     position: relative;
-    background-image: url(img/IMG.jpg);
+    background-image: url(../img/vertical.jpg);
     background-size: cover;
     background-position: center;
     animation: none;
